<resources>
    <string name="app_name">LampineApp</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Lampine Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>


    <string name="Dialog.WaitForLampConn.title">Connecting to Lamp</string>
    <string name="Dialog.WaitForLampConn.msg">This might take a few seconds</string>


    <string name="lamp_connection_lost">Lost signal to lamp</string>
    <string name="lamp_connection_lost_msg">Is the lamp too far away from your smartphone?</string>


    <!-- Actionbar titles -->
    <string name="title_connect_to_lamp">Connect to Lampine...</string>
    <string name="title_live_control_lamp">Live Control Lamp...</string>
    <string name="title_configure_lamp">Configure Lamp...</string>
    <string name="title_lamp_info">Lamp Information...</string>

    <!-- Informational items -->
    <string name="info_searching_for_devices">Searching for Lampine devices...</string>
    <string name="info_howto_connect">To connect a Lampine device, triple press the button on your lamp to enable bluetooth.</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="send_button_text">Send</string>
    <string name="slider_intensity_text">Light Intensity</string>
    <string name="slider_color_text">Color Selection</string>
    <!-- Dialog Messages -->

    <!-- Button texts -->

    <string name="add_new_config_item">Add new lamp mode</string>

    <!-- Fragment configure lamp -->
    <string name="frag_conf_lamp_button_white_config">White</string>
    <string name="frag_conf_lamp_button_color_config">Colored</string>

    <!-- Fragment configure lamp mode white -->
    <string name="frag_conf_lamp_mode_white_info_at_bottom">You can sort your lamp modes by long press.\nTo select a mode on the lamp single press your lamp\'s switch to scroll through your modes.</string>
    <string name="frag_conf_lamp_mode_white_listitem_text">Intensity: </string>

    <!-- Activity edit lamp mode white -->
    <string name="act_edit_mode_white_title_add">Add mode</string>
    <string name="act_edit_mode_white_title_edit">Edit mode</string>
    <string name="act_edit_mode_white_preview_string">Enable live preview</string>
    <string name="act_edit_mode_white_intensity_percentage_string">%d \%% (%d lm) </string>
    <string name="act_edit_mode_white_led_parameter_string">LED parameters:</string>
    <string name="act_edit_mode_white_led_parameter_power_string">Input power: %d mW</string>
    <string name="act_edit_mode_white_led_parameter_current_string">Current: %d mA</string>
    <string name="act_edit_mode_white_battery_parameter_string">Battery parameters:</string>
    <string name="act_edit_mode_white_battery_lifetime_string">Estimated lifetime: %d:%d h</string>
    <string name="act_edit_mode_white_battery_warning_string">Notice: To avoid overheating, the lamp will only be able to stay %d s in this mode</string>




    <string name="permit_location">The Android System requires you to permit location access in order to detect Bluetooth LE devices.\nYou may find this strange and so do we. Thank you Google!</string>

</resources>