<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="48dp"
    android:layout_marginEnd="48dp"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="56dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_remove_red_eye_24px" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:gravity="center"
            android:text="Enable live preview"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/live_control_color_mode_switch"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:checked="true" />
        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="56dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/ic_wb_sunny_black_24dp" />

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/act_edit_mode_white_intensity_percentage_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/act_edit_mode_white_intensity_percentage_string"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <com.lampineapp.graphics.gradientbar.GradientProgressBar
        android:id="@+id/act_edit_mode_white_intensity_previewbar"
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="56dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_memory_24px" />

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/act_edit_mode_white_led_parameter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/act_edit_mode_white_led_parameter_string"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/act_edit_mode_white_led_parameter_power_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/act_edit_mode_white_led_parameter_power_string"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/act_edit_mode_white_led_parameter_current_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/act_edit_mode_white_led_parameter_current_string"
        android:textSize="16sp"
        android:typeface="normal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_battery_std_24px" />

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/act_edit_mode_white_battery_parameter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/act_edit_mode_white_battery_parameter_string"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/act_edit_mode_white_battery_lifetime_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/act_edit_mode_white_battery_lifetime_string"
        android:textSize="16sp"
        android:typeface="normal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/act_edit_mode_white_battery_warning_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/act_edit_mode_white_battery_warning_string"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/act_edit_mode_white_intensity_slider"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:value="false"
        android:valueFrom="0"
        android:valueTo="1"
        app:labelBehavior="gone"
        app:thumbColor="@color/colorAccent"
        app:trackColorActive="@color/colorAccent"
        app:trackColorInactive="@color/colorBackgroundDark" />


</LinearLayout>